# API

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
data/: clinical_notes.csv
lab_00_rest_fundamentals/: README.md
lab_01_your_first_api/: README.md  app.py
lab_02_train_model/: README.md  train.py
lab_03_expose_model/: README.md  app.py
lab_04_test_api/: README.md  test_api.py
lab_05_deploy/: README.md  app.py
lab_06_llm_api/: README.md  app.py  test_app.py
models/: README.md
solutions/: lab_00_answers.md  lab_01_challenge3.md  lab_03_challenges.md  lab_04_challenges.md  lab_05_challenges.md  lab_06_challenges.md
step_00_concepts/: README.md
step_01_hello_api/: README.md  app.py
step_02_medical_api/: README.md  app.py
step_03_live_model/: README.md  app.py
step_04_deploy_render/: README.md  app.py  render.yaml
