# ============================================================
# pyproject.toml — Single config for deps, tools, and metadata
# ============================================================
# Modern Python projects use pyproject.toml instead of separate
# requirements.txt, setup.py, setup.cfg, .flake8, pyproject.toml, etc.
#
# Install with:  uv sync
# Or with pip:   pip install -e ".[dev]"
# ============================================================

[project]
name = "rest-api-builder"
version = "1.0.0"
description = "Hands-on tutorial: build, test, and deploy a REST API serving an ML model"
readme = "README.md"
requires-python = ">=3.11"

# --- Runtime dependencies ---
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "scikit-learn>=1.5.1",
    "joblib>=1.4.2",
    "pandas>=2.2.2",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Dev dependencies — install with: uv sync --extra dev
dev = [
    "pytest>=8.3.2",
    "httpx>=0.27.0",            # needed by FastAPI TestClient
    "ruff>=0.6.0",              # linter + formatter (replaces flake8, black, isort)
]

# ── Ruff configuration ─────────────────────────────────────────────
# Ruff is a blazing-fast Python linter and formatter written in Rust.
# It replaces flake8, black, isort, and more — all in one tool.
#
# Run linter:    ruff check .
# Auto-fix:      ruff check . --fix
# Format code:   ruff format .

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
]
ignore = [
    "E501", # line too long — formatter handles this
]

[tool.ruff.format]
quote-style = "double"

# ── Pytest configuration ───────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["lab_04_test_api", "lab_06_llm_api"]
pythonpath = ["."]              # ensures lab_03_expose_model is importable
addopts = "-v"
markers = [
    "llm_eval: tests that call the real HuggingFace LLM (slow, needs HF_TOKEN)",
]
